objects/UHG_CalloutHistory__c.object
<CustomObject>
    <description>Object to store history of UHG Callouts</description>
    <fields>
        <fullName>Callout_Requested_Date_Time__c</fullName>
        <label>Callout Requested Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Callout_Status__c</fullName>
        <label>Callout Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Insured__c</fullName>
        <label>Life Insured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>UHG_CalloutHistory</label>
    <nameField>
        <label>UHG_CalloutHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UHG_CalloutHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>